# installer

./: .gitignore  Cargo.toml  DOCS.md  README.md  TODO.md  build.rs  default.nix  flake.nix  icon_256.icns
.github/workflows/: appbundle.yml  rust-debug-win.yml  rust-test.yml  rust.yml  rust_debug.yml
scripts/: build-appbundle.sh
src/: gui.rs  main.rs  pat  pat_unstable  style.css
src/assets/: Wynncraft_Game_Font.woff2.base64  background_installer.png.base64  cog_icon.png.base64  style.css
src/gui/: modal.rs
