[package]
name = "installer"
version = "1.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false


[dependencies]
base64 = "0.21.0"
chrono = "0.4.24"
dirs = "5.0.0"
image = "0.24.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.68"
futures = "0.3.28"
isahc = "1.7.2"
zip = "0.6.4"
dioxus = { version = "0.5.1", features = ["desktop"] }
cached = "0.43.0"
regex = "1.8.1"
rfd = "0.14.0"
log = "0.4.21"
simplelog = "0.12.2"
platform-info = "2.0.3"

[build-dependencies]
winres = "0.1"
