[package]
name = "wynncraft-overhaul-installer"
version = "1.5.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false


[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
dirs = "5.0.1"
image = "0.25.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.81"
futures = "0.3.30"
isahc = "1.7.2"
zip = "2.1.4"
dioxus = { version = "0.5.6", features = ["desktop"] }
cached = { version = "0.53.0", features = ["async"] }
regex = "1.10.5"
rfd = "0.14.1"
log = "0.4.22"
simplelog = "0.12.2"
platform-info = "2.0.3"

[build-dependencies]
winres = "0.1"
